--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,68 +1,126 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+:root{
+    --primary: #ff5151;
+    --secondary: #ff2121;
+    --darkGray: #212121;
+    --mediumGray: #303030;
+    --mediumGray2: #555;
+    --lightGray: #9e9e9e;
+    --lightGray2: #aeaeae;
+    --lightGray3: #dadada;
+    --dimWhite: rgba(255, 255, 255, 0.7);
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+
+*{
+    font-family: Montserrat, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+
+.flex-center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid var(--primary);
+    padding: 0.5rem 0.8rem;
+    font-weight: 600;
+    transition: 0.1s linear;
+    background-color: white;
+    color: var(--primary);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.btn-fill{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.5rem 0.8rem;
+    font-weight: 600;
+    transition: 0.1s linear;
+    background-color: var(--primary);
+    color: white;
+}
+
+.btn-fill:hover{
+    background-color: var(--secondary);
+}
+
+
+.btn:hover{
+    background-color: var(--primary);
+    color: white;
+}
+
+
+.input-theme{
+    border-bottom: 2px solid var(--lightGray3);
+    padding: 0.1rem 0.5rem;
+}
+
+.input-theme:focus{
+    outline: none;
+    border-bottom-color: var(--primary);
+}
+
+.placeholder{
+    position: absolute;
+    left: 0.4rem;
+    top: 0;
+    color: #6e6e6e;
+    pointer-events: none;
+    transition: 0.1s linear;
+}
+
+.placeholder.active{
+    top: -24px;
+    left: 0;
+    font-size: 13px;
+    counter-reset: var(--primary);
+}
+
+.input-theme:focus + .placeholder{
+    top: -24px;
+    left: 0;
+    font-size: 13px;
+    color: var(--primary);
+}
+
+
+
+/* login loading animation */
+
+.pulse-container {
+    width: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
-  a:hover {
-    color: #747bff;
+  
+  .pulse-bubble {
+    width: 17px;
+    height: 17px;
+    border-radius: 50%;
+    background-color: var(--primary);
   }
-  button {
-    background-color: #f9f9f9;
+  
+  .pulse-bubble-1 {
+      animation: pulse .5s ease 0s infinite alternate;
   }
-}
+  .pulse-bubble-2 {
+      animation: pulse .5s ease .2s infinite alternate;
+  }
+  .pulse-bubble-3 {
+      animation: pulse .5s ease .4s infinite alternate;
+  }
