--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,9 @@
     --lightGray2: #aeaeae;
     --lightGray3: #dadada;
     --dimWhite: rgba(255, 255, 255, 0.7);
+    --toastify-toast-width: 350px;
+    --toastify-toast-min-height: 54px;
+    --toastify-toast-bd-radius: 2px;
 }
 
 
