--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,12 +11,39 @@
     --lightGray: #9e9e9e;
     --lightGray2: #aeaeae;
     --lightGray3: #dadada;
+    --lightGray4: #ebebeb;
     --dimWhite: rgba(255, 255, 255, 0.7);
-    --toastify-toast-width: 350px;
+    --toastify-toast-width: 370px;
     --toastify-toast-min-height: 54px;
     --toastify-toast-bd-radius: 2px;
+    --toastify-icon-color-success: white;
+    --toastify-icon-color-error: white;
 }
 
+.Toastify__toast-theme--dark.Toastify__toast--success {
+    background: #07bc0c;
+    color: white;
+    font-weight: 500;
+    text-align: center;
+}
+
+.Toastify__toast-theme--dark.Toastify__toast--error {
+    background: #e74c3c;
+    color: white;
+    font-weight: 500;
+    text-align: center;
+}
+
+.Toastify__close-button{
+    transition: none;
+    visibility: hidden;
+    color: white;
+    opacity: 1;
+}
+
+.Toastify__toast:hover .Toastify__close-button{
+    visibility: visible;
+}
 
 *{
     font-family: Montserrat, sans-serif;
@@ -25,7 +52,6 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
-
 
 .flex-center{
     display: flex;
